# todohawk

./: CLAUDE.md  Cargo.toml
src/: main.rs  parser.rs  reporter.rs  scanner.rs  types.rs
src/tui/: event.rs  mod.rs  run.rs  ui.rs
