[package]
name = "todohawk"
version = "0.1.0"
edition = "2024"
description = "A CLI tool that scans codebases for TODO, FIXME, HACK, and other comment annotations"
license = "MIT"

[dependencies]
clap = { version = "4", features = ["derive"] }
walkdir = "2"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
colored = "3"
anyhow = "1"
glob = "0.3"
ratatui = "0.29"
crossterm = "0.28"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
